--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Html-London-Trip</title>
 </head>
 <body>
+    <!--Intestazione-->
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
+    </header>
+
+    <hr>
+
     
 </body>
 </html>
