added section table spese

--- a/index.html
+++ b/index.html
@@ -16,6 +16,51 @@
 
     <hr>
 
-    
+    <!--Corpo Pagina-->
+    <main>
+        <!--Sezione Spese-->
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <!--Intestazione Tabella-->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!--Corpo Tabella-->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <!--Footer Tabella-->
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>    
+            </table>
+        </section>
+
+        <hr>
+
+    </main>
 </body>
 </html>
