--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 
         <hr>
 
+        <!--Sezione cose da fare-->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#x2717;</li>
+                <li>Visitare Greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#x2717;</li>
+            </ul>
+        </section>
+
+        <hr>
     </main>
 </body>
 </html>
